--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "test",
-      "program": "${workspaceFolder}/compiler"
-    },
+      "program": "${workspaceFolder}/vm"
+    }
   ]
 }
